[package]
name = "unveil"
version = "0.3.1"
authors = ["António Marques <me@antoniomarques.eu>"]
description = "Rust binding for OpenBSD's unveil(2)"
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/unveil-rs"
readme = "README.md"
keywords = ["openbsd", "security"]
categories = ["api-bindings"]

[dependencies]
libc = "0.2"
